covers feature-12, feature-16, and issue-7: heatmap now has styles and colors for  different numbers of daily submissions

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,12 @@
   outline: none;
 }
 
+table {
+  margin-left: auto;
+  margin-right: auto;
+  border-collapse: collapse;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
